Details
-
Bug
-
Resolution: Fixed
-
Major
-
57402ee91e1a0b74bf5894942cf3f968db4a8bf8
Description
With the merge of 57402ee (a part of the setup_improvements branch), it regresses the USETUP on installing the BTRFS bootcode within the partition thus unable to create a partition with BTRFS at all.
A debug log is attached with commented NDEBUG macro for more verbosity. According to the log, IOCTL_DISK_GET_PARTITION_INFO_EX fails with NTSTATUS code which is STATUS_INVALID_PARAMETER. I suspect the cause of the problem SystemRootPath has the last slash (like the following line below) and the I/O control thinks of this path as invalid.
(base/setup/usetup/usetup.c:4201) SystemRootPath: \Device\Harddisk0\Partition1\ |