[USETUP] Add a couple of missing TrimTrailingPathSeparators_UStr() calls.

Fixes in particular a regression brought by 57402ee (thanks George Bisoc
for having noticed this), where the BTRFS bootsector code could not be
installed anymore.

CORE-15192